@@ -1,4 +1,4 @@
-{ inputs, config, lib, ... }:
+{ inputs, pkgs, config, lib, ... }:
 let
   inherit (lib) mkDefault mkIf mkForce;
   cfg = config.modules.pipewire;
@@ -8,6 +8,12 @@ in
   options.modules.pipewire.enable = lib.mkEnableOption "enable sound with pipewire";
   config = mkIf cfg.enable {
     security.rtkit.enable = true; # hands out realtime scheduling priority to user processes on demand. Improves performance of pulse
+
+    # additional utilities
+    environment.systemPackages = with pkgs; [
+      easyeffects
+      helvum
+    ];
     services = {
       pipewire = {
         # enables alsa, pulseaudio, and jack support by default
